src/sentry/static/sentry/less/shared-components.less
/* ... */
/**
* Nav tabs
* ============================================================================
*/

.nav-tabs {
  border-bottom: 0;
  margin: 0 0 20px;

  > li {
    margin-right: 20px;

    > li.pull-right {
      float: right;
    }

    > a {
      font-size: 15px;
      padding: 0 0 10px;
      margin: 0;
      border: 0;
      background: none;
      color: @60;
      min-width: 30px;
      text-align: center;

      &:hover,
      &:active,
      &:focus {
        background: none;
        color: @gray-darker;
      }
    }

    .dropdown-menu {
      border-radius: 3px;
    }

    &.active {
      a,
      a:hover,
      a:focus {
        cursor: pointer;
        border: 0;
        border-bottom: 4px solid @purple;
        background: none;
        color: @gray-darkest;
        font-weight: 400;
      }
    }
  }

  &.border-bottom {
    border-bottom: 1px solid @trim;
  }

  &.anchor-right {
    li {
      margin: 0 0 0 30px;
    }
  }
}

/**
* Badge
* ============================================================================
*/

.badge {
  background: @40;
  color: #fff;
  font-size: 75%;
  font-weight: 600;
  .square(20px);
  padding: 0 5px;
  min-width: 20px;
  width: auto;
  border-radius: 20px;
  line-height: 20px;
  text-align: center;
  display: inline-block;
  position: relative;
  top: -1px;
  margin-left: 4px;
  .transition(0.1s background linear);

  &.new {
    background: @red;
  }

  &.badge-soft {
    color: @gray;
    top: 0;
    line-height: 18px;
    border: 1px solid @gray-lighter;
    background: inherit;
  }

  &.strong {
    background: @blue;
  }

  &.highlight {
    background: @green;
  }
}

/**
* Label
* ============================================================================
*/

.label.verification {
  &.label-warning {
    background-color: @yellow-orange;
  }

  &.label-success {
    background-color: @green-light;
  }

  display: inline;
  padding: 0.2em 0.6em 0.3em;
  font-size: 75%;
  font-weight: bold;
  line-height: 1;
  color: #fff;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: 0.25em;
  margin-left: 4px;
}

/**
* Repository label
* ============================================================================
*/

.repo-label {
  .label;
  display: inline-block;
  vertical-align: text-bottom;
  padding: 5px 8px;
  line-height: 1;
  background: @40;
}

/**
* Project nav
* ============================================================================
*/

ul.radio-inputs {
  .list-unstyled;
  position: relative;
  display: inline-block;
  margin-bottom: 10px;

  li.radio {
    margin-top: 0;
    margin-right: 10px;
    margin-bottom: 10px;
    margin-left: 0;
    display: block;
    font-weight: normal;

    label {
      padding-left: 25px;

      input {
        margin-left: -25px;
        margin-top: 4px;
        vertical-align: middle;
      }
    }
  }
}

/**
* Modal
* ============================================================================
*/
.modal-backdrop {
  background-color: @gray-dark;
}

.modal-container {
  position: relative;
}
.modal-container .modal,
.modal-container .modal-backdrop {
  position: absolute;
}

.modal {
  .close {
    background: none;
    border: 0;
    padding: 0;
    margin: 0;
    font-size: 24px;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    right: 24px;
    z-index: 100;
    color: lighten(@gray, 20);
    .transition(color 0.1s linear);

    &:hover {
      color: @gray;
    }
  }
  .modal-content {
    padding: 30px;
    box-shadow: 0 15px 40px 0 rgba(67, 62, 75, 0.3), 0 1px 15px 0 rgba(67, 61, 74, 0.15);
    border-radius: 7px;
    border: 0;
  }

  .modal-header {
    background: rgba(249, 250, 251, 0.8);
    border-bottom: 1px solid @trim;
    border-radius: 7px 7px 0 0;
    padding: 20px 30px;
    margin: -30px -30px 20px;
    position: relative;

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      font-size: 20px;
      font-weight: 600;
      margin-bottom: 0;
      line-height: 1.1;
    }
  }

  .modal-body {
    padding: 0;
    font-size: 15px;

    p:last-child {
      margin-bottom: 0;
    }

    .alert {
      border-radius: @border-radius-base;
    }

    img {
      max-width: 100%;
      border-radius: 3px;
      border: 1px solid @trim;
      box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08);
    }

    .form-actions {
      margin-bottom: 0;
    }
  }

  .modal-footer {
    padding: 20px 30px;
    border-top: 1px solid @trim;
    margin: 20px -30px -30px;
    display: flex;
    justify-content: flex-end;
    text-align: initial;
  }

  .nav-stacked {
    margin-bottom: 0;

    li {
      a {
        .transition(none);
        &:hover {
          color: #fff;
          background: @purple;
        }
      }
    }
  }
}

// Command Palette
.command-palette.modal {
  .modal-content {
    padding: 0;
  }
}

// Docs Search
.help-search-modal.modal {
  .modal-content {
    padding: 0;
  }
}

.create-ownership-rule-modal {
  @media (min-width: 767px) {
    .modal-dialog {
      width: 80%;
      margin-left: -40%;
    }
  }
  .modal-content {
    overflow: initial;
  }
}

/**
* Well
* ============================================================================
*/
.blankslate {
  text-align: center;
  padding: 50px 0;
  .icon {
    font-size: 72px;
    color: @40;
    margin-bottom: 10px;
  }

  h5 {
    margin-bottom: 10px;
  }
}

/**
 * Error level colors
 * ============================================================================
 */

.level-error .error-level {
  background: @orange;
}
&.level-info .error-level {
  background: @blue;
}
&.level-warning .error-level {
  background: @yellow-orange;
}
&.level-error .error-level {
  background: @orange;
}
&.level-fatal .error-level {
  background: @red;
}
&.level-sample .error-level {
  background: @purple;
}
/* ... */

